# simpleExpCalculator

./: CMakeLists.txt
include/: expcalc.h  expcheck.h  expconvert.h  expio.h  valcheck.h
src/: expcalc.cpp  expcheck.cpp  expconvert.cpp  expio.cpp  main.cpp  valcheck.cpp
